# anonlink-client

./: .gitignore  .pre-commit-config.yaml  .pypirc  .readthedocs.yml  Blocking_API.ipynb  CHANGELOG.md  README.md  README.rst  azure-pipelines.yml  cli.spec  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.azurePipeline/: skipNotebook.yml  testNotebook.yml  wholeBuild.yml
.github/workflows/: ci.yml  testNotebook.yml  unittests.yml  wholeBuild.yml
anonlinkclient/: __init__.py  cli.py  main.py  main_novt.py  progress.py  requirements.txt  rest_client.py  utils.py
anonlinkclient/data/: schema.json
client/: __init__.py  cli.py  clk_cli.py  clk_util.py  config.py  main.py  main_novt.py  rest_client.py  server.py  utils.py
client/data/: blocking_schema.json  nvtr_schema.json
docs/: blocking-protocol-generic.puml  blocking-schema.rst  cli.rst  conf.py  development.rst  devops.rst  doc-requirements.txt  glossary.md  index.rst  nomenclature.md  nomenclature.rst  references.rst  rest_client.rst
docs/schemas/: blocking_schema.md  p-sig-config-schema.json
docs/tutorial/: Anonlink with Progress bar.ipynb  Blocking with Anonlink Entity Service.ipynb  anonlink-novt.ipynb  anonlink-test.ipynb  blocking_schema.json  index.rst  novt_blocks_0.json  novt_schema.json  psig_blocking_schema.json  tutorial-requirements.txt  tutorial_api.ipynb  tutorial_cli.ipynb  util.py
docs/tutorial/data/: ncvr_numrec_5000_modrec_2_ocp_0_myp_0_nump_10.csv  ncvr_numrec_5000_modrec_2_ocp_0_myp_1_nump_10.csv  ncvr_numrec_5000_modrec_2_ocp_0_myp_2_nump_10.csv  ncvr_numrec_5000_modrec_2_ocp_20_myp_0_nump_10.csv  ncvr_numrec_5000_modrec_2_ocp_20_myp_1_nump_10.csv  ncvr_numrec_5000_modrec_2_ocp_20_myp_2_nump_10.csv
poc/: README.md  block_filter_generator.py  block_result.py  block_statistics.py  blocks_generator.py  candidate_block_generator.py  clk_util.py  config.py  data_util.py  filter.py  main.py  main_novt.py  poc.py  requirements.txt  reverse_index.py  server.py  signature_generator.py  statistics.py  validation.py
tests/: __init__.py  out.json  test_cli.py  test_clkcli.py  test_mock_server.py  test_server.py  test_utils.py
tests/testdata/: clks_a.json  clks_b.json  dirty-data-blocking-schema.json  lambda-fold-schema.json  lambda_fold_schema.json  novt_blocks_1.json  novt_clk_0.json  novt_clk_1.json  p-sig-schema.json  small.csv
