[tool.poetry]
name = "anonlink-client"
version = "0.1.5"
description = "Client side tool for clkhash and blocklib"
authors = [
    "Wilko Henecka <wilkohenecka@gmx.net>",
    "Brian Thorne <brian@hardbyte.nz>"
]
readme = "README.md"
packages = [{include = "anonlinkclient"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bashplotlib = "^0.6.5"
blocklib = "^0.1.8"
click = "^7.1.2"
clkhash = "^0.16.1"
jsonschema = "^3.2.0"
requests = "^2.25.1"
retrying="^1.3.3"
minio = "^7.0.3"

[tool.poetry.dev-dependencies]
numpy = "^1.23.4"
pandas = "^1.5.1"
pytest = "^6.2.5"
pytest-cov = "^2.11.1"
pytest-timeout="^1.4.2"
nbval="^0.9.6"
mock="^4.0.2"
ijson="^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
