[tool.poetry]
name = "anonlink-client"
version = "0.1.8"
description = "Client side tool for clkhash and blocklib"
authors = [
    "Wilko Henecka <wilkohenecka@gmx.net>",
    "Brian Thorne <brian@hardbyte.nz>"
]
readme = "README.md"
packages = [{include = "anonlinkclient"}]
repository = "https://github.com/data61/anonlink-client"
documentation = "https://anonlink-client.readthedocs.io/en/latest/"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

include = [
    "CHANGELOG.md"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/data61/anonlink-client/issues"

[tool.poetry.scripts]
anonlink = 'anonlinkclient.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
bashplotlib = "^0.6"
blocklib = "^0.1.8"
click = ">=7.1.2,<9.0.0"
clkhash = "^0.17"
jsonschema = ">=3.2,<5.0"
requests = "^2.25.1"
retrying="^1.3.3"
minio = "^7.0.3"
ijson="^3.1.4"
pydantic = "^1.10.5"
jupyter = "^1.0.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
jupyter = "^1.0.0"
recordlinkage = "^0.15"

[tool.poetry.group.dev.dependencies]
numpy = "^1.23.4"
pandas = "^1.5.1"
pytest = ">=6.2.5,<8.0.0"
pytest-cov = "^4.0.0"
pytest-timeout="^1.4.2"
nbval="^0.9.6"
mock="^4.0.2"
mypy = "^0.982"
twine = "^4.0.1"
anonlink="^0.15"
pre-commit = "^2.20.0"
recordlinkage = "^0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
